--- a/config.example.json
+++ b/config.example.json
@@ -1,3 +1,5 @@
 {
-    "token": "BOT_TOKEN_GOES_HERE"
+    "token": "BOT_TOKEN_GOES_HERE",
+    "applicationID": "APPLICATION_ID_HERE",
+    "guildID": "GUILD_ID_HERE"
 }
