--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "conebot-music",
-  "version": "1.0.0",
-  "description": "Music bot for VMS Discord Server",
-  "main": "bot.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "gearysw",
-  "license": "ISC",
-  "dependencies": {
-    "@discordjs/builders": "^0.6.0",
-    "@discordjs/opus": "^0.5.3",
-    "@discordjs/rest": "^0.1.0-canary.0",
-    "@discordjs/voice": "^0.6.0",
-    "discord-player": "^5.1.0",
-    "discord.js": "^13.1.0"
-  }
+    "name": "conebot-music",
+    "version": "1.0.0",
+    "description": "Music bot for VMS Discord Server",
+    "main": "bot.js",
+    "scripts": {
+        "start": "node bot.js",
+        "check": "node dependencyReport.js",
+        "deploy": "node deploy.js"
+    },
+    "author": "gearysw",
+    "license": "ISC",
+    "dependencies": {
+        "@discordjs/builders": "^0.6.0",
+        "@discordjs/opus": "^0.5.3",
+        "@discordjs/rest": "^0.1.0-canary.0",
+        "@discordjs/voice": "^0.6.0",
+        "discord-player": "^5.1.0",
+        "discord.js": "^13.1.0",
+        "yt-search": "^2.10.1",
+        "ytdl-core-discord": "^1.3.1"
+    }
 }
